# backend-lab

./: .gitignore  README.md
async-api/: README.md  pyproject.toml  requirements.txt
async-api/app/: config.py  database.py  db_models.py  exceptions.py  main.py  routers.py
async-api/app/controllers/: user.py
async-api/app/models/: user.py
async-api/app/schemas/: post.py  user.py
async-api/app/views/: user.py
async-api/tests/: conftest.py  test_integration.py  test_user.py
auth-flow/: README.md  api.http  config.js  index.js  package.json  pnpm-lock.yaml  user-repository.js
blogging-platform-api/: .gitignore  PRD.md  package.json  pnpm-lock.yaml  skills-lock.json  tsconfig.json
exercices/: blogging-platform-api.md  broadcast-server.md  caching-proxy.md  database-backup-utility.md  e-commerce-api.md  expense-tracker-api.md  expense-tracker.md  github-trending-cli.md  github-user-activity.md  image-processing-service.md  index.md  linux-server-setup.md  markdown-note-taking-app.md  movie-reservation-system.md  multi-container-application.md  number-guessing-game.md  personal-blog.md  real-time-leaderboard.md  scalable-e-commerce-platform.md  task-tracker-cli.md  tmdb-cli-tool.md  todo-list-api.md  unit-converter.md  url-shortening-service.md  weather-api.md  workout-tracker.md
express-typescript-api/: package.json  pnpm-lock.yaml  tsconfig.json
github-activity-cli/: .gitignore  .oxfmtrc.json  CHALLENGE.md  SUITE.md  package.json  pnpm-lock.yaml  tsconfig.json
task-tracker-cli/: .oxfmtrc.json  PROBLEM.md  README.md  SUITE.md  package.json  tsconfig.json  (+6 more)
(+41 files in other folders)
